test/type/fail/duplicate_local.j
class A {
  Void main() {
    Int b;
    Int a;
    Int a;
    return;
  }
}
